crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@158.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": 1, \"b\":1}' @? '$ ? (@.a == @.b)';"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..52
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..52
      TypeCast@13..30
        AConst@13..30
          Sconst@13..30 "'{\"a\": 1, \"b\":1}'"
      Whitespace@30..31 " "
      Op@31..33 "@?"
      Whitespace@33..34 " "
      AConst@34..52
        Sconst@34..52 "'$ ? (@.a == @.b)'"
  Ascii59@52..53 ";"

