crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@162.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"c\": {\"a\": 1, \"b\":1}}' @? '$.* ? (@.a == @.b)';"
---
SelectStmt@0..62
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..61
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..61
      TypeCast@13..37
        AConst@13..37
          Sconst@13..37 "'{\"c\": {\"a\": 1, \"b\":1}}'"
      Whitespace@37..38 " "
      Op@38..40 "@?"
      Whitespace@40..41 " "
      AConst@41..61
        Sconst@41..61 "'$.* ? (@.a == @.b)'"
  Ascii59@61..62 ";"

