crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@163.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": 1, \"b\":1}' @? '$.** ? (@.a == @.b)';"
---
SelectStmt@0..56
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..55
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..55
      TypeCast@13..30
        AConst@13..30
          Sconst@13..30 "'{\"a\": 1, \"b\":1}'"
      Whitespace@30..31 " "
      Op@31..33 "@?"
      Whitespace@33..34 " "
      AConst@34..55
        Sconst@34..55 "'$.** ? (@.a == @.b)'"
  Ascii59@55..56 ";"

