crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@168.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"c\": {\"a\": 2, \"b\":1}}', '$.** ? (@.a == (@.b + 1))');"
---
SelectStmt@0..79
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..77
    FuncCall@7..77
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..48
        Sconst@24..48 "'{\"c\": {\"a\": 2, \"b\":1}}'"
      Ascii44@48..49 ","
      Whitespace@49..50 " "
      AConst@50..77
        Sconst@50..77 "'$.** ? (@.a == (@.b  ..."
  Ascii41@77..78 ")"
  Ascii59@78..79 ";"

